# SmartHouseEmulator

./: .gitignore  CMakeLists.txt  README.md  install.sh  main.c
core/: AddDevice.c  AddRoom.c  Cli.c  SmartHouseCore.c  VTime.c
include/: AddDevice.h  AddRoom.h  Cli.h  SmartHouseCore.h  VTime.h
